media control: fix vertical alignment for segmented volume bar on some browsers

--- a/src/components/media_control/public/media-control.scss
+++ b/src/components/media_control/public/media-control.scss
@@ -330,7 +330,7 @@
         @include transition(width .2s ease-out);
 
         .segmented-bar-element[data-volume] {
-          display: inline-block;
+          float: left;
           width: 4px;
           padding-left: 2px;
           height: 12px;
